# xoxo

./: .gitignore  Cargo.toml  LICENSE  bench.sh  random_arena_games.sh  readme.md  run_arena_games.sh  score.csv
benches/: mcts_speed.rs
src/: alpha_beta.rs  arena.rs  black_jack.rs  console_player.rs  core.rs  game.rs  lib.rs  main.rs  mcts.rs  mcts_ai.rs  min_max.rs  player.rs  random_ai.rs  tictactoe.rs  ultimate_ttt.rs
src/game/: connect_four.rs  tictactoe.rs  ultimate_ttt.rs
src/player/: alpha_beta.rs  console.rs  console_player.rs  heuristics.rs  mcts.rs  mcts_ai.rs  min_max.rs  random.rs  random_ai.rs
tests/: minimax_ttt.rs  pruning_ttt.rs
