[package]
name = "xoxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
rand = "0.8.5"

[[bin]]
name = "xoxo"
path = "src/main.rs"

[[bin]]
name = "bj"
path = "src/black_jack.rs"