[package]
name = "xoxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
