[package]
name = "xoxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive"] }
csv = "1.3.0"
enum-iterator = "1.5.0"
itertools = "0.12.1"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dependencies.simple_logger]
version = "4.3.3"
default-features = false
